@@ -17,9 +17,9 @@ SOURCES =  \
 	Migo/Migo.Net/Exceptions/RemoteFileModifiedException.cs \
 	Migo/Migo.Net/TransferStatusManager.cs \
 	Migo/Migo.Syndication/Enumerations/FeedDownloadError.cs \
+	Migo/Migo.Syndication/Enumerations/FeedDownloadStatus.cs \
 	Migo/Migo.Syndication/Enumerations/FEEDS_BACKGROUNDSYNC_ACTION.cs \
 	Migo/Migo.Syndication/Enumerations/FEEDS_BACKGROUNDSYNC_STATUS.cs \
-	Migo/Migo.Syndication/Enumerations/FEEDS_DOWNLOAD_STATUS.cs \
 	Migo/Migo.Syndication/Enumerations/FEEDS_EVENTS_DOWNLOAD_COUNT_FLAGS.cs \
 	Migo/Migo.Syndication/Enumerations/FEEDS_EVENTS_ITEM_COUNT_FLAGS.cs \
 	Migo/Migo.Syndication/Enumerations/FEEDS_SYNC_SETTING.cs \
