@@ -25,7 +25,7 @@
     <File name="Migo/Migo.Syndication/Enumerations/FEEDS_BACKGROUNDSYNC_ACTION.cs" subtype="Code" buildaction="Compile" />
     <File name="Migo/Migo.Syndication/Enumerations/FEEDS_BACKGROUNDSYNC_STATUS.cs" subtype="Code" buildaction="Compile" />
     <File name="Migo/Migo.Syndication/Enumerations/FeedDownloadError.cs" subtype="Code" buildaction="Compile" />
-    <File name="Migo/Migo.Syndication/Enumerations/FEEDS_DOWNLOAD_STATUS.cs" subtype="Code" buildaction="Compile" />
+    <File name="Migo/Migo.Syndication/Enumerations/FeedDownloadStatus.cs" subtype="Code" buildaction="Compile" />
     <File name="Migo/Migo.Syndication/Enumerations/FEEDS_EVENTS_DOWNLOAD_COUNT_FLAGS.cs" subtype="Code" buildaction="Compile" />
     <File name="Migo/Migo.Syndication/Enumerations/FEEDS_EVENTS_ITEM_COUNT_FLAGS.cs" subtype="Code" buildaction="Compile" />
     <File name="Migo/Migo.Syndication/Enumerations/FEEDS_SYNC_SETTING.cs" subtype="Code" buildaction="Compile" />
